# attrition-esn

./: .gitignore  .ruff.toml  COMMIT_TEMPLATE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_analyse_exploratoire.ipynb  model_booster.json  model_booster.xgb  model_booster_patched.json
