[project]
name = "attrition-esn"
version = "0.1.0"
description = "Prediction des Attritions dans une ESN"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dython",
    "imbalanced-learn",
    "jupyter",
    "jupyterlab>=4.4.10",
    "lightgbm",
    "matplotlib",
    "notebook",
    "numpy",
    "openpyxl",
    "pandas",
    "pyarrow",
    "pyyaml",
    "rich",
    "scikit-learn",
    "scipy",
    "seaborn",
    "shap>=0.49.1",
    "shapash==2.7.10",
    "xgboost",
]

[dependency-groups]
dev = [
    "imbalanced-learn",
    "ipython",
    "jupyterlab",
    "pytest",
    "shap",
]
lint = [
    "black",
    "ruff",
]
